# demo-precc

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
examples/: hello.c  multi_func.c
scripts/: gen_kernel_i_files.sh  run_experiments.sh  run_experiments_remaining.sh
src/: crossfile.rs  lib.rs  main.rs
tests/dctags/: bug1.c  bug10.c  bug11.c  bug12.c  bug13.c  bug14.c  bug15.c  bug16.c  bug17.c  bug18.c  bug19.c  bug2.c  bug20.c  bug21.c  bug22.c  bug23.c  bug24.c  bug25.c  bug26.c  bug28.c  bug29.c  bug3.c  bug30.c  bug31.c  bug32.c  bug33.c  bug34.c  bug35.c  bug36.c  bug37.c  bug38.c  bug39.c  bug4.c  bug40.c  bug41.c  bug44.c  bug45.c  bug46.c  bug47.c  bug48.c  (+37 more)
