[package]
name = "precc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rayon = "1.8"
rustc-hash = "1.1"
libc = "0.2"
once_cell = "1.18"
parking_lot = "0.12"  # Faster mutex for single-threaded hot paths
compact_str = "0.8"   # Small string optimization - inline storage for strings <= 24 bytes
regex = "1"           # For scanning code content for prototype references
memchr = "2"          # Fast byte search for key parsing
mimalloc = { version = "0.1", default-features = false }  # Fast allocator for multi-threaded
serde = { version = "1.0", features = ["derive"] }  # For cross-file dependency manifest
serde_json = "1.0"    # JSON output for dependency manifest
glob = "0.3"          # For finding PU files in cross-file optimization
bumpalo = "3.14"      # Arena allocator for temporary strings
chrono = "0.4"        # For timestamp formatting in benchmark_modes
toml = { version = "0.8", features = ["parse"] }  # For .precc-config.toml config files
rand = "0.8"          # For shuffling in test_batch sampling
rusqlite = { version = "0.31", features = ["bundled"] }  # Experiment result DB

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
lto = "thin"  # Cross-language LTO with C code
codegen-units = 16
panic = "abort"
split-debuginfo = "off"

[profile.test]
debug = true

[[bin]]
name = "precc-sweep"
path = "src/bin/sweep.rs"

[[bin]]
name = "benchmark_modes"
path = "src/bin/benchmark_modes.rs"

[[bin]]
name = "test_batch"
path = "src/bin/test_batch.rs"
